# zhongyi_code_new

./: README.md
arm_control_test/ros2_ws/: README.md  README_TEACH_REAL.md
arm_control_test/ros2_ws/src/wave_control_msgs/: CMakeLists.txt  package.xml
arm_control_test/ros2_ws/src/wave_control_msgs/msg/: JointTrajectory.msg  MotorCommand.msg  TeachRecord.msg  WaveCommand.msg  WaveStatus.msg
arm_control_test/ros2_ws/src/wave_control_msgs/srv/: TeachControl.srv  WaveControl.srv
arm_control_test/ros2_ws/src/wave_control_system/: README.md  README_TEACH.md  TEACH_FUNCTION_README.md  package.xml  setup.cfg  setup.py
arm_control_test/ros2_ws/src/wave_control_system/config/: wave_params.yaml
arm_control_test/ros2_ws/src/wave_control_system/launch/: teach_demo.launch.py  teach_real.launch.py  test.launch.py  test_launch.py  wave_system.launch.py
arm_control_test/ros2_ws/src/wave_control_system/test/: test_wave_controller.py
arm_control_test/ros2_ws/src/wave_control_system/wave_control_system/: generate_sine_trajectory.py  mock_joint_publisher.py  motor_driver_sim.py  teach_manager.py  teach_manager_real.py  test_node.py  test_playback.py  test_teach_function.py  test_teach_real.py  wave_client.py  wave_controller.py  wave_example.py  wave_gui.py
arm_control_test/ros2_ws/trajectories/: manual_test.json  my_wave_001.json  my_wave_002.json  real_test_001.json  sine_wave_test.json  (+1 more)
peripheral_management/: README.md  install_peripheral.sh  peripheral_manager.py  quick_scan.py  test_peripheral.py
system/: README.md  install.sh  quick_start.py  system_manager.py
